<resources>
    <string name="app_name">PracticeMain</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="login">Войти</string>
    <string name="department_name">Кафедра\n\nИнформатика и вычислительная техника</string>
    <string name="image">image</string>
    <string name="news">Новости</string>
    <string name="schedule">Расписание</string>
    <string name="registration">ОБРАЗОВАТЕЛЬНЫЙ ПОРТАЛ КГТУ</string>
    <string name="lecture_classes">Аудитории</string>
    <string name="study_part">Учебная часть</string>
    <string name="contacts">Контакты</string>
    <string name="scheme">Схема</string>
    <string name="classes_header">Кафедра ИВТ имеет 4 учебных лаборатории для обеспечения учебного процесса по профильным дисциплинам.</string>
    <string name="first_class">Учебно-исследовательская лаборатория <b>«Схемотехника ЭВМ»</b>, предназначенная для проведения лабораторных занятий по курсам: «Схемотехника», «ЭВМ и ПУ», «Вычислительные системы». «Элементы, узлы и устройства ЭВМ», изготовленными на базе интегральных схем, а  также УЛС "Основы цифровой техники" и  УЛС "Управляющий и операционный автомат".</string>
    <string name="second_class">Учебно-исследовательская лаборатория "Микропроцессоры и микроконтроллеры» (совмещенная с компьютерным классом), созданная для обеспечения лабораторных практикумов по курсу «Микропроцессоры и микроконтроллеры», "Микропроцессорные системы", а также для решения задач по разработке микропроцессорных систем контроля и управления при выполнении  УИР, НИРС, НИР, курсовых и дипломных проектов. Лаборатория оснащена универсальными  лабораторными стендами "Микроконтроллеры и микропроцессоры" разработанными студентами и преподавателями кафедры и внедренными в учебный процесс.</string>
    <string name="third_class">Учебно-исследовательская лаборатория сетевых технологий (совмещенная с компьютерным классом).</string>
    <string name="fourth_class">Учебная лаборатория курсового и дипломного проектирования (совмещенная с компьютерным классом).</string>
    <string name="copy">Скопировать</string>
    <string name="call">Позвонить</string>
    <string name="academic_hour"><b>Академический час</b> – традиционное название учебного часа в высшей школе.</string>
    <string name="academic_failure"><b>Академическая неуспеваемость</b> – неполучение в течение установленного срока положительной оценки по экзамену либо отметки «заочно» по конкретному виду учебной деятельности.</string>
    <string name="bachelor"><b>Бакалавр</b> (от позднелат. «вaccalarius», первоначальное значение – подвассал, от baccalaria – поместье) – во многих странах первая ученая степень. В средневековых университетах Западной Европы присваивалась студентам по завершении ими первого этапа образования. а сегодняшний день присваивается выпускникам, окончившим высшие учебные заведения, сдавшим государственные экзамены и защитившим дипломы после 4-х лет обучения.</string>
    <string name="grade_book"><b>Зачетная книжка</b> – (от лат. «мatricula» – список), документ студента вуза или учащегося среднего специального учебного заведения, в которой заносятся все дисциплины, включенные в учебный план (с указанием их объема в академических часах), проставляются экзаменационные оценки и отметки о зачетах по практическим занятиям, лабораторным и др. работам, по производственной и учебной практике, оценки за курсовые и дипломные проекты (работы). В зачетной книжке отмечается перевод студента (учащегося) на следующий курс.</string>
    <string name="final_certification"><b>Итоговая аттестация</b> – форма оценки профессиональных знаний, умений и навыков выпускника университета, полностью завершившего теоретическое обучение по основной образовательной программе, осуществляемая государственной аттестационной комиссией.</string>
    <string name="curator"><b>Куратор</b> – преподаватель, шествующий над академической группой студентов, осуществляющий контроль посещаемости и получаемых оценок, а также помогающий в различных ситуациях советом или делом.</string>
    <string name="master"><b>Магистр</b> – вторая академическая степень, присваиваемая в высших учебных заведениях. Присуждается лицам, окончившим вуз с академической степенью бакалавра, прошедшим дополнительный курс обучения в течение 2-х лет.</string>
    <string name="window"><b>Окно</b> – пустая пара, которую вы можете использовать по своему усмотрению.</string>
    <string name="pair"><b>Пара</b> – одно занятие в Университете, состоящее из двух академических часов (1 час 20минут) с десятиминутной переменой.</string>
    <string name="retake"><b>Пересдача</b> – повторная сдача экзамена (зачета) по дисциплине, как правило, с оценки «неудовлетворительно» (не зачтено) на положительную оценку (зачтено).</string>
    <string name="initation"><b>Посвящение</b> - Чтобы стать студентом, необходимо пройти обряд посвящения, но помни: настоящим студентом можно стать только после первой сессии.</string>
    <string name="module"><b>Модуль</b> – форма контроля качества знаний студента, осуществляемая каждые восемь недель. Всего в одном семестре два модуля.</string>
    <string name="professor"><b>Профессор</b> – должность, занимаемая преподавателем вуза, имеющим ученую степень доктора или кандидата наук.</string>
    <string name="session"><b>Сессия</b> - строго установленный период времени, предназначенный для сдачи экзаменов и зачетов за отчетный период.</string>
    <string name="rector"><b>Ректор</b> – глава высшего учебного заведения.</string>
    <string name="headman"><b>Староста</b> – самое важное и ответственное лицо в группе. Является связующим звеном между академической группой и администрацией Университета. Староста организует подготовку группы к занятиям, обеспечивает соблюдение дисциплины, выполнение правил внутреннего распорядка и своевременную явку студентов на занятия и мероприятия.</string>
    <string name="point_convertion">Шкала перевода баллов в оценки</string>
    <string name="_60">Неудовлетворительно – До 60 баллов</string>
    <string name="_61_73">Удовлетворительно – 61–73</string>
    <string name="_74_86">Хорошо – 74–86</string>
    <string name="_87_100">Отлично – 87–100</string>
    <string name="first"><b>Отлично</b> – замечательный результат при нескольких незначительных недостатках</string>
    <string name="second">Очень хорошо – результат выше среднего, несмотря на определённое количество недостатков</string>
    <string name="third">Хорошо – в общем хорошая работа, несмотря на определённое число значительных недостатков</string>
    <string name="fourth">Удовлетворительно – добросовестная работа, содержащая, однако, значительные недостакти</string>
    <string name="fifth">Посредственно – результат соответствует минимально допустимым критериям</string>
    <string name="sixth">Неудовлетворительно – с правом пересдачи, необходима дополнительная работа для получения кредита</string>
    <string name="seventh">Неудовлетворительно – без прав пересдачи, необходимо повторить курс, необходима значительная дополнительная работа (повторный курс)</string>
    <string name="schrdule">Расписание</string>
    <string name="chode">Выберите группу</string>

</resources>