<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.main.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageButton
            android:contentDescription="@string/image"
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/radius_12dp"
            android:backgroundTint="@color/dark_blue"
            android:drawableEnd="@drawable/ic_back"
            android:padding="12dp"
            android:src="@drawable/ic_back"
            app:cornerRadius="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:contentDescription="@string/image"
            android:src="@drawable/logo_ivt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFAFA">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_login"
                android:drawableEnd="@drawable/ic_arrow_end"
                android:drawablePadding="12dp"
                android:text="@string/registration"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_schedule"
                android:drawableEnd="@drawable/ic_arrow_end"
                android:drawablePadding="12dp"
                android:text="@string/schedule"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_lecture_class"
                android:drawableEnd="@drawable/ic_arrow_end"
                android:drawablePadding="16dp"
                android:paddingStart="16dp"
                android:text="@string/lecture_classes"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_part"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_book"
                android:drawableEnd="@drawable/ic_arrow_end"
                android:drawablePadding="12dp"
                android:text="@string/study_part"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_phone"
                android:drawableEnd="@drawable/ic_arrow_end"
                android:drawablePadding="12dp"
                android:text="@string/contacts"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_scheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_scheme"
                android:drawableEnd="@drawable/ic_arrow_end"
                android:drawablePadding="12dp"
                android:text="@string/scheme"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>